# pgm-build-deps

./: .gitignore  README.md  pyproject.toml  remove-bad-licenses.sh  sync-headers.sh
.github/: dco.yml
.github/workflows/: publish-pypi.yml  sync-headers.yml
src/pgm_build_dependencies/doctest/: .gitignore
src/pgm_build_deps/: setup_ga_ci.py
test_cmake/: CMakeLists.txt  main.cpp
